fix: canonical pnpm workspace config with proper deps and scripts

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,6 @@
 packages:
-  - 'client'
-  - 'server'
-  - 'shared'
-  - 'infra/firebase/functions'
-  - 'mobile'
-  - 'apps/*'
+  - "client"
+  - "server"
+  - "mobile"
+  - "shared"
+  - "infra/firebase/functions"
