--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "skatehubba-monorepo",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "private": true,
   "packageManager": "pnpm@10.0.0",
   "engines": {
@@ -14,11 +14,29 @@
     "package:dist": "node scripts/assemble-dist.mjs",
     "test": "echo \"✅ No tests defined yet (Spec-compliant stub)\""
   },
+  "dependencies": {
+    "cmdk": "^1.1.1",
+    "drizzle-orm": "^0.45.1",
+    "drizzle-zod": "^0.8.3",
+    "embla-carousel-react": "^8.6.0",
+    "input-otp": "^1.4.2",
+    "react-day-picker": "^9.13.0",
+    "react-helmet": "^6.1.0",
+    "react-icons": "^5.5.0",
+    "zod": "^4.3.5",
+    "zustand": "^5.0.9"
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
+    "@types/leaflet": "^1.9.21",
+    "@types/react-helmet": "^6.1.11",
+    "autoprefixer": "^10.4.23",
     "concurrently": "^9.2.1",
     "eslint": "^9.39.2",
     "globals": "^17.0.0",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.19",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.52.0"
   }
