Update package.json for package manager and engines

--- a/client/package.json
+++ b/client/package.json
@@ -3,16 +3,17 @@
   "version": "1.0.0",
   "type": "module",
   "private": true,
+  "packageManager": "pnpm@10.0.0",
   "engines": {
-    "node": ">=20.0.0",
+    "node": "20.x",
     "pnpm": ">=9.0.0"
   },
   "scripts": {
     "dev": "vite",
-    "build": "pnpm exec tsc && pnpm exec vite build",
-    "preview": "vite preview",
+    "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "typecheck": "tsc --noEmit"
+    "build": "pnpm run typecheck && vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
