--- a/mobile/GoogleService-Info.plist
+++ b/mobile/GoogleService-Info.plist
@@ -3,23 +3,23 @@
 <plist version="1.0">
 <dict>
 	<key>CLIENT_ID</key>
-	<string>665573979824-hmmbb9o722r57457n42n5a7kg0eo1t6t.apps.googleusercontent.com</string>
+	<string>YOUR_IOS_CLIENT_ID.apps.googleusercontent.com</string>
 	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.665573979824-hmmbb9o722r57457n42n5a7kg0eo1t6t</string>
+	<string>com.googleusercontent.apps.YOUR_IOS_CLIENT_ID</string>
 	<key>ANDROID_CLIENT_ID</key>
-	<string>665573979824-9d2ld9dnbvougdh1nssamupslte50ttm.apps.googleusercontent.com</string>
+	<string>YOUR_ANDROID_CLIENT_ID.apps.googleusercontent.com</string>
 	<key>API_KEY</key>
-	<string>AIzaSyDlGjCHd5sXckKWFFwmP5wW0L6tH9LHvnI</string>
+	<string>YOUR_FIREBASE_API_KEY</string>
 	<key>GCM_SENDER_ID</key>
-	<string>665573979824</string>
+	<string>YOUR_GCM_SENDER_ID</string>
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.skatehubba.app</string>
+	<string>com.example.app</string>
 	<key>PROJECT_ID</key>
-	<string>sk8hub-d7806</string>
+	<string>your-firebase-project-id</string>
 	<key>STORAGE_BUCKET</key>
-	<string>sk8hub-d7806.firebasestorage.app</string>
+	<string>your-firebase-project-id.firebasestorage.app</string>
 	<key>IS_ADS_ENABLED</key>
 	<false></false>
 	<key>IS_ANALYTICS_ENABLED</key>
@@ -31,6 +31,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:665573979824:ios:963170cbd0b1f053ee2d75</string>
+	<string>YOUR_FIREBASE_APP_ID</string>
 </dict>
 </plist>
