--- a/package.json
+++ b/package.json
@@ -22,6 +22,9 @@
     "typescript": "^5.9.3"
   },
   "pnpm": {
+    "overrides": {
+      "zod": "3.25.76"
+    },
     "onlyBuiltDependencies": [
       "esbuild",
       "@firebase/util",
