--- a/shared/package.json
+++ b/shared/package.json
@@ -7,7 +7,7 @@
     "build": "echo \"Shared package build (no compiled output required)\""
   },
   "dependencies": {
-    "zod": "^3.25.76",
+    "zod": "3.25.76",
     "drizzle-orm": "^0.45.1",
     "drizzle-zod": "^0.8.3"
   }
