--- a/server/package.json
+++ b/server/package.json
@@ -1,8 +1,9 @@
 {
   "name": "skatehubba-server",
   "version": "0.0.1",
-  "main": "dist/index.js",
+  "private": true,
   "type": "module",
+  "main": "dist/index.js",
   "scripts": {
     "dev": "tsx watch index.ts",
     "build": "pnpm exec tsc",
@@ -14,11 +15,33 @@
     "helmet": "^8.1.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "dotenv": "^17.2.3"
+    "dotenv": "^17.2.3",
+    "express-rate-limit": "^7.5.0",
+    "zod": "3.25.76",
+    "drizzle-orm": "^0.45.1",
+    "pg": "^8.13.0",
+    "firebase-admin": "^13.0.0",
+    "@google/generative-ai": "^0.21.0",
+    "openai": "^4.77.0",
+    "stripe": "^17.5.0",
+    "resend": "^4.1.0",
+    "nodemailer": "^6.9.0",
+    "bcryptjs": "^2.4.3",
+    "jsonwebtoken": "^9.0.2",
+    "validator": "^13.12.0",
+    "nanoid": "^5.0.9"
   },
   "devDependencies": {
     "@types/express": "^5.0.6",
     "@types/node": "^22.9.4",
+    "@types/cors": "^2.8.17",
+    "@types/compression": "^1.7.5",
+    "@types/cookie-parser": "^1.4.7",
+    "@types/pg": "^8.11.10",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
+    "@types/validator": "^13.12.2",
+    "@types/nodemailer": "^6.4.17",
     "tsx": "^4.21.0",
     "typescript": "^5.9.3"
   }
