--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "cd client && pnpm run build",
+  "buildCommand": "pnpm --filter client build",
   "outputDirectory": "dist/public",
   "installCommand": "corepack enable && corepack prepare pnpm@10.0.0 --activate && pnpm install --frozen-lockfile"
 }
