--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "check": "tsc --noEmit",
     "typecheck": "tsc --noEmit",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "build": "pnpm run typecheck && vite build",
