--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -67,4 +67,12 @@ updates:
         patterns: ["*"]
         update-types: ["patch", "minor"]
     ignore:
-      - depe
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major"]
+
+  # GitHub Actions
+  - package-ecosystem: "github-actions"
+    directory: "/"
+    schedule:
+      interval: "weekly"
+    open-pull-requests-limit: 3
