--- a/.github/workflows/validate-workflows.yml
+++ b/.github/workflows/validate-workflows.yml
@@ -12,12 +12,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # IMPORTANT:
+      # Exclude THIS validator file itself so it does not self-trigger
       - name: Check for manual Corepack usage
         shell: bash
         run: |
-          # Disallow corepack usage in workflows,
-          # but exclude this validator itself to avoid self-matching.
-          if grep -R "corepack enable" .github/workflows/*.yml | grep -v "validate-workflows.yml"; then
+          if grep -R "corepack enable" .github/workflows/*.yml \
+            --exclude=validate-workflows.yml; then
             echo "::error::Manual corepack usage detected. Use composite action."
             exit 1
           fi
@@ -26,23 +27,28 @@ jobs:
         shell: bash
         run: |
           EXPECTED=$(node -p "require('./package.json').packageManager.split('@')[1]")
-          COMPOSITE=$(grep -A5 "pnpm/action-setup" .github/actions/setup-pnpm-env/action.yml | grep "version:" | awk '{print $2}')
+          COMPOSITE=$(grep -A5 "pnpm/action-setup" \
+            .github/actions/setup-pnpm-env/action.yml \
+            | grep "version:" \
+            | awk '{print $2}')
 
           if [ "$EXPECTED" != "$COMPOSITE" ]; then
             echo "::error::pnpm version mismatch: package.json=$EXPECTED composite=$COMPOSITE"
             exit 1
           fi
 
-          echo "pnpm version OK: $EXPECTED"
+          echo "✅ pnpm version consistent: $EXPECTED"
 
       - name: Validate workflows use composite action
         shell: bash
         run: |
-          for workflow in .github/workflows/ci.yml .github/workflows/codeql.yml .github/workflows/deploy.yml; do
+          for workflow in .github/workflows/ci.yml \
+                          .github/workflows/codeql.yml \
+                          .github/workflows/deploy.yml; do
             if ! grep -q "uses: ./.github/actions/setup-pnpm-env" "$workflow"; then
-              echo "::error::$workflow does not use composite pnpm setup action"
+              echo "::error::$workflow does not use composite action"
               exit 1
             fi
           done
 
-          echo "All workflows use standardized pnpm setup"
+          echo "✅ All workflows use standardized setup"
