fix: remove framework override to use correct output directory

--- a/vercel.json
+++ b/vercel.json
@@ -2,6 +2,5 @@
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "buildCommand": "pnpm --filter skatehubba-client build",
   "outputDirectory": "dist/public",
-  "installCommand": "pnpm install",
-  "framework": "vite"
+  "installCommand": "pnpm install"
 }
