--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,8 @@
   "version": 2,
   "framework": "vite",
   "installCommand": "pnpm install",
-  "buildCommand": "pnpm -C client run build",
-  "outputDirectory": "dist/public",
+  "buildCommand": "pnpm run build",
+  "outputDirectory": "dist",
   "rewrites": [
     {
       "source": "/(.*)",
