--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,5 @@
 {
   "version": 2,
   "framework": "vite",
-  "buildCommand": "pnpm install && pnpm run build",
-  "outputDirectory": "dist/public",
-  "rewrites": [
-    { "source": "/(.*)", "destination": "/index.html" }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/index.html" }]
 }
