--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,8 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
-  "buildCommand": "pnpm --filter skatehubba-client build",
-  "outputDirectory": "client/dist",
-  "framework": null,
+  "buildCommand": "pnpm run build",
+  "outputDirectory": "dist",
+  "framework": "vite",
   "installCommand": "pnpm install",
   "rewrites": [
     {
