--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "typecheck": "pnpm -r run typecheck",
     "test": "vitest run",
     "test:watch": "vitest",
-    "test:coverage": "vitest run --coverage"
+    "test:coverage": "vitest run --coverage",
+    "lockfile:check": "pnpm install --frozen-lockfile --ignore-scripts",
+    "precommit:deps": "echo '⚠️  If you changed any package.json, run: pnpm install && git add pnpm-lock.yaml'"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.2",
@@ -50,8 +52,8 @@
     ]
   },
   "dependencies": {
-    "drizzle-orm": "^0.45.1",
-    "drizzle-zod": "^0.8.3",
+    "drizzle-orm": "^0.44.2",
+    "drizzle-zod": "^0.7.0",
     "pg": "^8.16.3"
   }
 }
