chore: fix tsconfig and cypress types

--- a/package.json
+++ b/package.json
@@ -75,7 +75,8 @@
     "onlyBuiltDependencies": [
       "esbuild",
       "@firebase/util",
-      "protobufjs"
+      "protobufjs",
+      "cypress"
     ]
   },
   "dependencies": {
