--- a/client/package.json
+++ b/client/package.json
@@ -69,6 +69,7 @@
     "zustand": "^5.0.0"
   },
   "devDependencies": {
+    "cypress": "^13.17.0",
     "@playwright/test": "^1.50.0",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^22.9.4",
