--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "db:migrate": "drizzle-kit migrate",
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
-    "set-admin": "tsx scripts/set-admin.ts"
+    "set-admin": "tsx scripts/set-admin.ts",
+    "validate:package-manager": "node scripts/validate-packages.mjs --package-manager-only"
   },
   "lint-staged": {
     "*.{ts,tsx}": [
